REGISTRO SILABO, TABLA SILABO

--- a/src/app/modules/docente-capacitador/aceptar-curso/pages/aceptar-curso.component.html
+++ b/src/app/modules/docente-capacitador/aceptar-curso/pages/aceptar-curso.component.html
@@ -266,7 +266,7 @@
         </tr>
     </tbody>
 </table>
-<button type="button" class="btn-outline-success" (click)="crearParti()" [disabled]="!formularioValido">Aceptar</button>
+<!-- <button type="button" class="btn-outline-success" (click)="crearParti()" [disabled]="!formularioValido">Aceptar</button> -->
 <button type="button" class="btn-outline-danger" [disabled]="!formularioValido">Rechazar</button>
 </body>
 <!-- | date: 'dd/MM/yyyy' } -->
