--- a/src/app/modules/docente-capacitador/aceptar-curso/pages/aceptar-curso.component.html
+++ b/src/app/modules/docente-capacitador/aceptar-curso/pages/aceptar-curso.component.html
@@ -178,7 +178,7 @@
                     <div class="card-body">
                         <h4 style="text-align: center;">Datos Generales</h4>
                         <br>
-                        <form>
+                        <!-- <form>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Nombre del Programa</h6>
@@ -228,10 +228,10 @@
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
                                     <Span></Span> <button (click)="listarFichas()">Guardar Programa</button>
-                                    <!-- <Span></Span> <button (click)="mostrarDatos()">Ver datos</button> -->
+                                    <Span></Span> <button (click)="mostrarDatos()">Ver datos</button>
                                 </div>
                             </div>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
 
@@ -266,7 +266,7 @@
         </tr>
     </tbody>
 </table>
-<!-- <button type="button" class="btn-outline-success" (click)="crearParti()" [disabled]="!formularioValido">Aceptar</button> -->
+<button type="button" class="btn-outline-success" (click)="crearUsuario()" [disabled]="!formularioValido">Aceptar</button>
 <button type="button" class="btn-outline-danger" [disabled]="!formularioValido">Rechazar</button>
 </body>
 <!-- | date: 'dd/MM/yyyy' } -->
